--- a/src/test/resources/NPANDAY_140_ConflictingExtensionsTest/pom.xml
+++ b/src/test/resources/NPANDAY_140_ConflictingExtensionsTest/pom.xml
@@ -66,7 +66,7 @@
   <pluginRepositories>
     <pluginRepository>
       <id>servebox</id>
-      <url>http://maven.servebox.org/repository</url>
+      <url>https://maven.servebox.org/repository</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
@@ -75,7 +75,7 @@
   <repositories>
     <repository>
       <id>servebox</id>
-      <url>http://maven.servebox.org/repository</url>
+      <url>https://maven.servebox.org/repository</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
